Fixed option description alignment on wide screens

--- a/app/styles/directives/configuration/option.scss
+++ b/app/styles/directives/configuration/option.scss
@@ -244,7 +244,7 @@ co-configuration-option:hover {
       left: auto;
 
       padding: 0 10px 0 10px;
-      margin: 0 0 0 50%;
+      margin: 0 0 0 100%;
 
       font-size: 0.78rem;
 
